--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,6 +26,6 @@ and open the template in the editor.
             <h3 id='homeButtons'><a href="medium.html">Medium</a></h3>  
             <h3 id='homeButtons'><a href="hard.html">Hard</a></h3>
         </section>
-                <!-- Song Player http://playlist.me --><script type="text/javascript" src="http://playlist.me/w/script.js" data-config="{'skin':'skins/aquaGreen/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'P.C-He%27s a pirate','url':'https://www.youtube.com/watch?v=yRh-dzrI4Z4'}]}" ></script><noscript><a href="http://playlist.me/skins/">SCM player skins</a></noscript><!-- playlist.me script end -->
+        <!-- Song Player http://playlist.me --><script type="text/javascript" src="http://playlist.me/index.html" data-config="{'skin':'skins/aquaGreen/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'P.C-He%27s a pirate','url':'https://www.youtube.com/watch?v=yRh-dzrI4Z4'}]}" ></script><noscript><a href="http://playlist.me/skins/">SCM player skins</a></noscript><!-- playlist.me script end -->
     </body>
 </html>
